Fix css issues and add scrollbar to train "timetable"

--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
   background-size: cover;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .containerStyle {
@@ -17,9 +17,8 @@
   padding: 30px;
   border-radius: 20px;
   max-height: 45vh;
-  overflow-y: scroll;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  overflow-y: auto;
+  overflow-x: hidden;
   width: 55%;
 }
 
@@ -33,12 +32,14 @@
 
 .inputContainer {
   display: flex;
+  column-gap: 10px;
   width: 80%;
-  flex-wrap: wrap;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
   justify-content: space-evenly;
   align-items: center;
-  margin-bottom: 10;
-  padding: 10;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .containerStyle::-webkit-scrollbar {
